# food-ordering-api

./: .gitignore  Cargo.toml  README.md  restaurants_schema.txt
migrations/: 20260310000000_init_schema.sql
src/: cloudinary.rs  config.rs  db.rs  error.rs  main.rs  paginations.rs
src/handlers/: auth.rs  menu.rs  mod.rs  orders.rs  restaurant.rs  review.rs  user.rs
src/middlewares/: auth.rs  role_guard.rs
src/models/: address.rs  cart.rs  driver.rs  favorite.rs  menu_item.rs  mod.rs  notification.rs  order.rs  restaurant.rs  review.rs  user.rs
src/routes/: mod.rs  restaurants.rs  user.rs
src/services/: auth_service.rs  email_service.rs  menu_service.rs  mod.rs  restaurant_service.rs  review_service.rs  user_service.rs
