[package]
name = "food-ordering-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (PostgreSQL async driver)
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "macros"] }

# Serialization / Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment variables
dotenvy = "0.15"

# Configuration
config = "0.13"

# JWT Authentication
jsonwebtoken = "9"

# Password hashing (Argon2)
argon2 = "0.5"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Error handling
thiserror = "1"
anyhow = "1"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Random number generation (for tokens)
rand = "0.8"
futures-util = "0.3"