[package]
name = "food-ordering-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web        = "4"
actix-rt         = "2"
actix-multipart = "0.6"
actix-ws         = "0.3"          # WebSocket support for real-time tracking
actix-web-actors = "4"            # Actor-based WebSocket handlers
tokio            = { version = "1", features = ["full"] }
futures-util     = "0.3"
sqlx = { version = "0.7", features = [
    "postgres", "runtime-tokio-native-tls",
    "uuid", "chrono", "macros"
]}
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

dotenvy = "0.15"

jsonwebtoken = "9"
argon2       = "0.5"
cloudinary = "0.4"

uuid    = { version = "1", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }

validator = { version = "0.16", features = ["derive"] }

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web  = "0.7"

thiserror = "1"
anyhow    = "1"

reqwest = { version = "0.11", features = ["json"] }

governor = "0.6"

rand = "0.8"
lettre = { version = "0.11", features = ["tokio1-native-tls", "tokio1"] }
